--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:OutlineText="http://schemas.android.com/apk/res-auto"
+    xmlns:OutlineTextView="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -180,63 +180,27 @@
         android:layout_below="@+id/dayLIne"
         android:layout_toRightOf="@+id/timeLine"
         android:orientation="horizontal"
-        android:rowCount="7">
+        android:columnCount="7">
 
-        <TextView
-            android:id="@+id/Mon1"
+        <myactivityresult.book.com.mobile_programming.OutlineTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:onClick="SetSchedule" />
+            OutlineTextView:textStroke = "true"
+            OutlineTextView:textStrokeWidth = "5"
+            android:text="1번"
+            />
 
-        <TextView
-            android:id="@+id/Tue1"
+        <myactivityresult.book.com.mobile_programming.OutlineTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:onClick="SetSchedule" />
+            android:text="2번"
+            OutlineTextView:textStroke="true"
+            OutlineTextView:textStrokeWidth="5" />
 
-        <TextView
-            android:id="@+id/Wed1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:onClick="SetSchedule" />
-
-        <TextView
-            android:id="@+id/Thu1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:onClick="SetSchedule" />
-
-        <TextView
-            android:id="@+id/Fri1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:onClick="SetSchedule" />
-
-        <TextView
-            android:id="@+id/Sat1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:onClick="SetSchedule" />
-
-        <TextView
-            android:id="@+id/Sun1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:onClick="SetSchedule" />
     </GridLayout>
 
 </RelativeLayout>
