--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,11 @@
             android:visibility="invisible"/>
 
         <TextView
-            android:text="월"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="월"
+            android:textAlignment="center" />
 
         <TextView
             android:text="화"
@@ -149,28 +149,12 @@
             android:text="18" />
 
         <TextView
+            android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_rowWeight="1"
             android:text="19" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:text="20" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:text="21" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:text="22" />
     </GridLayout>
 
     <GridView
@@ -183,6 +167,7 @@
         android:numColumns="7"
         android:stretchMode="columnWidth"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"></GridView>
-
+        android:layout_alignParentEnd="true"
+        android:verticalSpacing="1dp"
+        android:horizontalSpacing="1dp"></GridView>
 </RelativeLayout>
